# udk_configparser

./: .gitignore  README.md  pyproject.toml  setup.py
udk_configparser/: __init__.py  udk_configparser.py
